--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "@angular/router": "^15.2.0",
     "bootstrap": "^5.3.0-alpha3",
     "bootstrap-icons": "^1.10.5",
+    "ngx-filter-pipe": "^2.1.2",
+    "ngx-order-pipe": "^2.2.0",
+    "ngx-pagination": "^6.0.3",
+    "react-reactive-form": "^2.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
